# digidentity-platform

./: .gitattributes  .gitignore  CLAUDE.md  README.md
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_entities_hnsw.py  003_phase2_tables.py
apps/api/evals/: circuit_breaker.yaml  latency_sse.yaml  retrieval_real_estate.yaml  router_correctness.yaml
apps/api/evals/_archive/: retrieval_natural_queries_phase1.yaml
apps/api/scripts/: run_eval.py  seed_real_estate.py
apps/api/src/digidentity_api/: config.py  main.py
apps/api/src/digidentity_api/api/: conversations.py  leads.py  rendering.py  visitor_sessions.py
apps/api/src/digidentity_api/db/: __init__.py  base.py  errors.py  models.py  repositories.py  search.py  tenant_context.py
apps/api/src/digidentity_api/engines/: errors.py  llm_router.py  mock_provider.py
apps/api/src/digidentity_api/evals/: __init__.py  cases.py  metrics.py  runner.py
apps/api/src/digidentity_api/packs/: __init__.py  registry.py  stub_embeddings.py  templates.py
apps/api/tests/: conftest.py  test_adaptive_renderer.py  test_aesthetic_clinic_pack.py  test_agent_loop.py  test_cors.py  test_dental_luxury_pack.py  test_embeddings.py  test_evals.py  test_kg_search.py  test_llm_router.py  test_morph_rules_lint.py  test_ontology.py  test_phase2_tables.py  test_qualify.py  test_real_estate_golden.py  test_real_estate_pack.py  test_schemas_v3.py  test_spatial_navigate.py  test_sse_streaming.py  test_tenant_isolation.py  test_usage_logs.py  test_visitor_sessions.py
(+181 files in other folders)
