[project]
name = "digidentity-api"
version = "0.1.0"
description = "DigIdentity Living Site — API engine"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "celery[redis]>=5.4.0",
    "python-dotenv>=1.0.0",
    "uuid-utils>=0.9.0",
    "pgvector>=0.3.0",
    "numpy>=2.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "jsonschema[format-nongpl]>=4.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "testcontainers[postgres]>=4.8.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digidentity_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
